# Boss2D

./: .gitignore  LICENSE  README.md
Boss2D/: CMakeLists.txt
Boss2D/addon/: boss_addon_aac.cpp  boss_addon_aac.hpp  boss_addon_abc.cpp  boss_addon_abc.hpp  boss_addon_alpr.cpp  boss_addon_alpr.hpp  boss_addon_curl.cpp  boss_addon_curl.hpp  boss_addon_dlib.cpp  boss_addon_dlib.hpp  boss_addon_freetype.cpp  boss_addon_freetype.hpp  boss_addon_git.cpp  boss_addon_git.hpp  boss_addon_h264.cpp  boss_addon_h264.hpp  boss_addon_jpg.cpp  boss_addon_jpg.hpp  boss_addon_ogg.cpp  boss_addon_ogg.hpp  boss_addon_opencv.cpp  boss_addon_opencv.hpp  boss_addon_psd.cpp  boss_addon_psd.hpp  boss_addon_ssl.cpp  boss_addon_ssl.hpp  boss_addon_tesseract.cpp  boss_addon_tesseract.hpp  boss_addon_tif.cpp  boss_addon_tif.hpp  boss_addon_webrtc.cpp  boss_addon_webrtc.hpp  boss_addon_websocket.cpp  boss_addon_websocket.hpp  boss_addon_zip.cpp  boss_addon_zipa.cpp  boss_addon_zipa.hpp  boss_fakewin.cpp  boss_fakewin.h  boss_integration_abcview-1.1.0.cpp  (+74 more)
Boss2D/addon/abcview-1.1.0_for_boss/: CMakeLists.txt  README
Boss2D/addon/abcview-1.1.0_for_boss/cmake/: AbcViewBoost.cmake  AbcViewIlmBase.cmake  AbcViewOpenEXR.cmake  AbcViewPyIlmBase.cmake  AbcViewPython.cmake  AbcViewZlib.cmake
Boss2D/addon/abcview-1.1.0_for_boss/cmake/Modules/: FindAlembic.cmake  FindIlmBase.cmake  FindOpenEXR.cmake  FindPyIlmBase.cmake
Boss2D/addon/abcview-1.1.0_for_boss/doc/: CMakeLists.txt  abcopengl.rst  conf.py  index.rst  modules.rst  overrides.rst
Boss2D/addon/abcview-1.1.0_for_boss/lib/: CMakeLists.txt
Boss2D/addon/abcview-1.1.0_for_boss/lib/AbcOpenGL/: All.h  CMakeLists.txt  ColorOverride.cpp  ColorOverride.h  DrawContext.h  Drawable.h  Export.h  Foundation.h  ICurvesDrw.cpp  INuPatchDrw.cpp  IObjectDrw.cpp  IObjectDrw.h  IPointsDrw.cpp  IPolyMeshDrw.cpp  ISubDDrw.cpp  IXformDrw.cpp  MeshDrwHelper.cpp  MeshDrwHelper.h  Scene.cpp  Scene.h  SceneWrapper.cpp  SceneWrapper.h
Boss2D/addon/abcview-1.1.0_for_boss/python/: CMakeLists.txt
Boss2D/addon/abcview-1.1.0_for_boss/python/AbcView/: setup.py
Boss2D/addon/abcview-1.1.0_for_boss/python/AbcView/lib/abcview/: app.py  config.py  gl.py  io.py  utils.py
Boss2D/addon/abcview-1.1.0_for_boss/python/AbcView/lib/abcview/widget/: tree_widget.py  viewer_widget.py
Boss2D/addon/abcview-1.1.0_for_boss/python/PyAbcOpenGL/: CMakeLists.txt  PyAlembicOpenGL.cpp
Boss2D/addon/abcview-1.1.0_for_boss/python/io2ma/: io2ma
Boss2D/core/: boss.cpp  boss.h  boss.hpp  boss_addon.cpp  boss_addon.hpp  boss_array.hpp  boss_asset.cpp  boss_asset.hpp  boss_buffer.cpp  boss_buffer.hpp  boss_context.cpp  boss_context.hpp  boss_counter.hpp  boss_library.cpp  boss_library.hpp  boss_map.hpp  boss_math.cpp  boss_math.hpp  boss_memory.cpp  boss_memory.hpp  boss_mutex.cpp  boss_mutex.hpp  boss_object.hpp  boss_parser.cpp  boss_parser.hpp  boss_profile.cpp  boss_profile.hpp  boss_queue.hpp  boss_remote.cpp  boss_remote.hpp  boss_share.cpp  boss_share.hpp  boss_stdarray.hpp  boss_stdmap.hpp  boss_storage.cpp  boss_storage.hpp  boss_string.cpp  boss_string.hpp  boss_tasking.cpp  boss_tasking.hpp  (+7 more)
Boss2D/doxygen/: boss2d.doxygen
Boss2D/element/: boss_clip.cpp  boss_clip.hpp  boss_color.cpp  boss_color.hpp  boss_font.cpp  boss_font.hpp  boss_image.cpp  boss_image.hpp  boss_matrix.cpp  boss_matrix.hpp  boss_point.cpp  boss_point.hpp  boss_rect.cpp  boss_rect.hpp  boss_size.cpp  boss_size.hpp  boss_solver.cpp  boss_solver.hpp  boss_tween.cpp  boss_tween.hpp  boss_vector.cpp  boss_vector.hpp
Boss2D/format/: boss_bmp.cpp  boss_bmp.hpp  boss_flv.cpp  boss_flv.hpp  boss_png.cpp  boss_png.hpp  boss_zen.cpp  boss_zen.hpp
Boss2D/platform/: boss_platform.hpp  boss_platform_blank.cpp  boss_platform_blank.hpp  boss_platform_cocos2dx.cpp  boss_platform_cocos2dx.hpp  boss_platform_impl.cpp  boss_platform_impl.hpp  boss_platform_native.cpp  boss_platform_native.hpp  boss_platform_qt5.cpp  boss_platform_qt5.hpp  boss_platform_qt6.cpp  boss_platform_qt6.hpp
Boss2D/platform/plugin_qt5/qtlottie/tests/auto/bodymovin/shape/: CMakeLists.txt
Boss2D/platform/plugin_qt5/qtlottie/tests/auto/bodymovin/shape/shapelayer/: CMakeLists.txt
Boss2D/platform/plugin_qt5/qtlottie/tests/auto/bodymovin/shape/trimpath/: CMakeLists.txt
Boss2D/platform_new/: boss_platform.hpp  boss_platform_blank.cpp  boss_platform_blank.hpp  boss_platform_cocos2dx.cpp  boss_platform_impl.cpp  boss_platform_impl.hpp  boss_platform_native.cpp  boss_platform_native.hpp  boss_platform_qt5.cpp  boss_platform_qt5.hpp
Boss2D/project/: boss2d.doxygen  boss2d.natvis  boss2d.pri  boss2d.props  boss2d.vcxproj  boss2d.vcxproj.filters  boss2d_mfc.vcxproj  boss2d_mfc.vcxproj.filters  boss2d_qt5.props
Boss2D/service/: boss_asyncfilemanager.cpp  boss_backey.cpp  (+34 more)
docs/: annotated.html  boss_8h_source.html  boss_8hpp_source.html  boss__addon_8hpp_source.html  boss__array_8hpp_source.html  boss__asset_8hpp_source.html  boss__asyncfilemanager_8hpp_source.html  boss__backey_8hpp_source.html  boss__batchbuilder_8hpp_source.html  boss__bmp_8hpp_source.html  boss__boxr_8hpp_source.html  boss__brii_8hpp_source.html  boss__buffer_8hpp_source.html  boss__camera360service_8hpp_source.html  boss__clip_8hpp_source.html  boss__color_8hpp_source.html  boss__context_8hpp_source.html  boss__counter_8hpp_source.html  boss__cumi_8hpp_source.html  boss__firebaseservice_8hpp_source.html  boss__flv_8hpp_source.html  boss__font_8hpp_source.html  boss__image_8hpp_source.html  boss__library_8hpp_source.html  boss__livechatservice_8hpp_source.html  boss__map_8hpp_source.html  boss__math_8hpp_source.html  boss__matrix_8hpp_source.html  boss__memory_8hpp_source.html  boss__mutex_8hpp_source.html  boss__oauth2service_8hpp_source.html  boss__object_8hpp_source.html  boss__parasource_8hpp_source.html  boss__parser_8hpp_source.html  boss__platform_8hpp_source.html  boss__platform__blank_8hpp_source.html  boss__platform__cocos2dx_8hpp_source.html  boss__platform__impl_8hpp_source.html  boss__platform__native_8hpp_source.html  boss__platform__qt5_8hpp_source.html  (+1195 more)
zaydata/: run_zaydata.bat
(+20509 files in other folders)
